# qstardict

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  INSTALL  README  README.MACOS  README.md  THANKS  TODO  qstardict.1  qstardict.pri  qstardict.pro  qsvn2dist
config.tests/kde/: kde.pro  main.cpp
kdeplasma/: CMakeLists.txt  COMPILING
kdeplasma/applet/: CMakeLists.txt  dict.cpp  dict.h
kdeplasma/dataengine/: CMakeLists.txt  dictengine.cpp  dictengine.h
plugins/: baseplugin.h  dictplugin.h  metadata.h  plugin.pri  plugins.pri  plugins.pro  pluginserver.h  toolbarplugin.h  trayplugin.h
plugins/anki/: anki-meta.h.in  anki.cpp  anki.h  anki.pro  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  slotreceiver.cpp  slotreceiver.h
plugins/kdeintegration/: kdeintegration-meta.h.in  kdeintegration.cpp  kdeintegration.h  (+3 more)
qstardict/: adddictionarydialog.cpp  adddictionarydialog.h  adddictionarydialog.ui  appinfo.cpp  appinfo.h  application.cpp  application.h  cssedit.cpp  cssedit.h  cssedit.ui  dbusadaptor.cpp  dbusadaptor.h  dictbrowser.cpp  dictbrowser.h  dictbrowsersearch.cpp  dictbrowsersearch.h  dictbrowsersearch.ui  dictcore.cpp  dictcore.h  dictinfo.h  dictplugin.h  dictwidget.cpp  dictwidget.h  downloadprogressdialog.cpp  downloadprogressdialog.h  iso639.cpp  iso639.h  keyboard.cpp  keyboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginmanager.cpp  pluginmanager.h  pluginsmodel.cpp  pluginsmodel.h  pluginsview.cpp  pluginsview.h  popupwindow.cpp  (+16 more)
qxt/: FROM  patch-1-x11.patch  qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_p.h  update.sh
resources/: qstardict.desktop  qstardict.qrc
src/: adddictionarydialog.cpp  adddictionarydialog.h  cssstyle.cpp  cssstyle.h  dbusadaptor.cpp  dbusadaptor.h  dictcore.cpp  dictcore.h  dictwidget.cpp  dictwidget.h  downloadprogressdialog.cpp  downloadprogressdialog.h  iso639.cpp  iso639.h  keyboard.cpp  keyboard.h  main.cpp  mainwindow.cpp  mainwindow.h  popupwindow.cpp  popupwindow.h  resizablepopup.cpp  resizablepopup.h  selection.cpp  selection.h  settingsdialog.cpp  settingsdialog.h
translations/: qstardict-bg_BG.qm  qstardict-bg_BG.ts  qstardict-cs-CZ.qm  qstardict-cs-CZ.ts  qstardict-cs_CZ.qm  qstardict-cs_CZ.ts  qstardict-de_DE.qm  qstardict-de_DE.ts  qstardict-el_GR.ts  qstardict-en_US.ts  qstardict-es_ES.ts  qstardict-fr_FR.ts  qstardict-he_IL.ts  qstardict-it_IT.qm  qstardict-it_IT.ts  qstardict-lt_LT.ts  qstardict-pl_PL.qm  qstardict-pl_PL.ts  qstardict-pt_BR.qm  qstardict-pt_BR.ts  qstardict-ru_RU.qm  qstardict-ru_RU.ts  qstardict-ua_UA.qm  qstardict-ua_UA.ts  qstardict-uk_UA.ts  qstardict-zh_CN.qm  qstardict-zh_CN.ts  qstardict-zh_TW.qm  qstardict-zh_TW.ts  translations.pri  translations.pro  translations.qrc
ui/: adddictionarydialog.ui  mainwindow.ui  settingsdialog.ui
(+172 files in other folders)
